# docstore-prod

./: .dockerignore  .env.example  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  NEW_FEATURES.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
.gitlab-ci/: .gitlab-ci.yml
alembic/versions/: 001_comments_collaboration.py  002_notification_logging.py  003_audit_logging.py
app/: __init__.py  main.py  tasks.py
app/api/: audit.py  briefing.py  chat.py  comments.py  demo.py  documents.py  export.py  metrics.py  planning.py  search.py  skills.py  stores.py  system.py  wiki.py  wiki_curator.py
app/core/: audit.py  auth.py  config.py  database.py  llm_client.py  model_registry.py  rate_limiter.py  websocket.py
app/ingestion/: chunker.py  extractor.py  ner.py
app/models/: comments.py  database.py  schemas.py
app/search/: engine.py
app/security/: __init__.py  (+1 more)
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
frontend/: Dockerfile  entrypoint.sh  index.html  nginx.conf  package.json  playwright.config.js  vite.config.js
scripts/: backup.sh  import_audit_logs.sh  install.sh  migrate_new_features.sh  postgres-init.sh  restore.sh  test_coverage_report.sh
systemd/: docstore-backup.service  docstore-backup.timer  docstore.service
tests/: test_all.py  test_api_integration.py  test_audit_db.py  test_e2e_playwright.py  test_edge_cases.py  test_metrics.py  test_new_features.py  test_performance.py  test_security.py  test_security_pii_redaction.py  test_security_prompt_injection.py  test_utils.py
(+28 files in other folders)
